<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
              android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.avatlantik.cooperative.activity.LoginActivity">

    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/progresstextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/syncing"
            android:textSize="@dimen/text_size_medium" />

        <ProgressBar
            android:id="@+id/registration_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_nav_heared_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info_organization"
                        android:textColor="@color/zxing_result_view"
                        android:textSize="26dp" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/support_info_mail"
                        android:textColor="@color/zxing_result_view"
                        android:textSize="20dp" />
                </LinearLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/text_size_small_style"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/serverAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_server_adress"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_medium" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/text_size_small_style">

                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_login"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="@dimen/text_size_medium" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/text_size_small_style"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_medium" />

            </android.support.design.widget.TextInputLayout>

            <Switch
                android:id="@+id/using_ecomilk_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/questions_answer_no"
                android:textOn="@string/questions_answer_yes"
                android:text="@string/using_Ecomilk"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/zxing_result_view"
                android:layout_alignParentRight="true"
                android:button="@null"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"/>

            <Switch
                android:id="@+id/ecomilk_autostart_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/questions_answer_no"
                android:textOn="@string/questions_answer_yes"
                android:text="@string/using_Ecomilk_automatic_start"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/zxing_result_view"
                android:layout_alignParentRight="true"
                android:button="@null"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"/>


            <Switch
                android:id="@+id/using_flowmeter_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/questions_answer_no"
                android:textOn="@string/questions_answer_yes"
                android:text="@string/using_flowmeter"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/zxing_result_view"
                android:layout_alignParentRight="true"
                android:button="@null"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"/>

            <Switch
                android:id="@+id/using_phone_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/questions_answer_no"
                android:textOn="@string/questions_answer_yes"
                android:text="@string/using_phone"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/zxing_result_view"
                android:layout_alignParentRight="true"
                android:button="@null"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/connect_eco_spinner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connection_to_ecomilk"
                    android:textColor="@color/zxing_result_view"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/connect_eco_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="3"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        >

        <Button
            android:id="@+id/ret_login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_button_return"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/login_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_button_right_botton"
            android:drawableTop="@drawable/ic_save"
            android:text="@string/action_save"
            android:textColor='@color/colorWhile'
            android:textSize="@dimen/activity_margin_middle"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
