<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/background_activity"
    android:orientation="vertical"
              android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.avatlantik.cooperative.activity.MemberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/name_member_TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_textview"
            android:gravity="center_horizontal|center_vertical"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/text_size_medium"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/open_member_detail_button"
            android:layout_width="@dimen/fab_size_middle"
            android:layout_height="@dimen/fab_size_middle"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="start"
            app:backgroundTint="@color/colorBlue"
            app:fabSize="auto"
            app:srcCompat="@mipmap/ic_account"
            app:elevation="0dp"
            app:layout_anchorGravity="bottom|left|end"
            android:focusableInTouchMode="true"/>/>

    </LinearLayout>

    <ListView
        android:id="@+id/info_member_ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:divider="@null"
        android:dividerHeight="0dp"></ListView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/phonecall_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_button_phone"
            android:text="@string/phone_call"
            android:drawableTop="@drawable/ic_phone_call"
            android:textColor='@color/colorWhile'
            android:textSize="@dimen/text_size_small"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/foto_doc_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_heignt_one"
                android:background="@drawable/shape_button_left_top"
                android:drawableTop="@drawable/ic_photo_album"
                android:text="@string/photo_documents"
                android:textColor='@color/colorWhile'
                android:textSize="@dimen/activity_margin_middle"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/ret_main_menu_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_heignt_one"
                android:background="@drawable/shape_button_return"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/services_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_heignt_one"
                android:background="@drawable/shape_button_right_top"
                android:drawableTop="@drawable/ic_order"
                android:text="@string/services"
                android:textColor='@color/colorWhile'
                android:textSize="@dimen/activity_margin_middle"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/reception_milk_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_heignt_one"
                android:background="@drawable/shape_button_right_botton"
                android:drawableTop="@drawable/ic_milk"
                android:text="@string/reception_milk"
                android:textColor='@color/colorWhile'
                android:textSize="@dimen/activity_margin_middle"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>